@@ -43,38 +43,6 @@ except ImportError as err:
 
 PY2 = sys.version_info[0] == 2
 
-# Load hacks for Windows
-if platform.system().lower() == 'windows':
-	# Monkey patch multiprocessing's Popen to fork properly on Windows Pyinstaller
-	# https://github.com/pyinstaller/pyinstaller/wiki/Recipe-Multiprocessing
-	try:
-		import multiprocessing.popen_spawn_win32 as forking
-	except ImportError as err:
-		try:
-			import multiprocessing.popen_fork as forking
-		except ImportError as err:
-			import multiprocessing.forking as forking
-
-	class _Popen(forking.Popen):
-		def __init__(self, *args, **kw):
-			if hasattr(sys, 'frozen'):
-				# We have to set original _MEIPASS2 value from sys._MEIPASS
-				# to get --onefile mode working.
-				os.putenv('_MEIPASS2', sys._MEIPASS)
-			try:
-				super(_Popen, self).__init__(*args, **kw)
-			finally:
-				if hasattr(sys, 'frozen'):
-					# On some platforms (e.g. AIX) 'os.unsetenv()' is not
-					# available. In those cases we cannot delete the variable
-					# but only set it to the empty string. The bootloader
-					# can handle this case.
-					if hasattr(os, 'unsetenv'):
-						os.unsetenv('_MEIPASS2')
-					else:
-						os.putenv('_MEIPASS2', '')
-
-	forking.Popen = _Popen
 
 class DataSource(object):
 	bits = platform.architecture()[0]
